# mandelbrot-zoom

./: CMakeLists.txt  README.md
src/: Stopwatch.cpp  Stopwatch.h  compute_set.cpp  fixedpoint1024.cpp  fixedpoint1024.hpp  generate_frames.cpp  main.cpp  set_map_format.hpp
